# CETL

./: .clang-tidy  .gitignore  .gitmodules  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  sonar-project.properties
.devcontainer/: devcontainer.json
.devcontainer/cmake/toolchains/: arm-none-eabi-gcc.cmake  clang-native.cmake  gcc-native-32.cmake  gcc-native.cmake  gcc7-native.cmake
.devcontainer/toolshed-amd64/: devcontainer.json
.devcontainer/toolshed-arm64/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: cetlvast.yml  codeql.yml
cetlvast/: CMakeLists.txt  CMakePresets.json  CMakePresetsVendorTemplate.json  verify.py
cetlvast/cmake/compiler_flag_sets/: _native_common.cmake  default.cmake  native.cmake
cetlvast/cmake/modules/: CompileTest.cmake  ExternalDependenciesGitHub.cmake.in  ExternalDependenciesPatch.sh  FindSonarScanner.cmake  FindTestReport.cmake  Findbenchmark.cmake  Findclangformat.cmake  Finddocs.cmake  Findgcovr.cmake  Findgenhtml.cmake  Findgoogletest.cmake  Findgtest.cmake  Findlcov.cmake  Findo1heap.cmake  Findsonar-scanner.cmake  ProjectLibrary.cmake  clang-format-check.py
cetlvast/cmake/modules/patches/: googletest.patch
cetlvast/cmake/suites/: compile.cmake  docs.cmake  lint.cmake  native.cmake  unittest.cmake
cetlvast/cmake/toolchains/: clang-native.cmake  gcc-native.cmake
cetlvast/include/cetlvast/: datasets.h  helpers.h  helpers.hpp  helpers_gtest.hpp  helpers_gtest_memory_resource.hpp  helpers_rtti.hpp  memory_resource_mock.hpp  smf_policies.hpp  tracking_memory_resource.hpp  typelist.hpp
cetlvast/src/: cetlvast.cpp
cetlvast/suites/benchmark/: CMakeLists.txt
cetlvast/suites/benchmark/pmr/: benchmark_pmr_function.cpp
cetlvast/suites/compile/: CMakeLists.txt  test_any_footprint_get_const.cpp  test_any_footprint_get_non_const.cpp  test_any_footprint_set.cpp  test_span_empty.cpp  test_unbounded_variant_footprint_get_const.cpp  test_unbounded_variant_footprint_get_non_const.cpp  test_unbounded_variant_footprint_set.cpp  test_unbounded_variant_zero_footprint_non_pmr.cpp
cetlvast/suites/docs/: CMakeLists.txt  doxygen-flat-style.css  doxygen.ini  footer.html  stylesheet.css
cetlvast/suites/docs/examples/: CMakeLists.txt  example_01_polyfill.cpp  example_01_polyfill_20.cpp  example_01_span.cpp  example_01_span_dynamic.cpp  example_01_span_static.cpp  example_02_polyfill.cpp  example_02_span.cpp  example_03_memory_resource.cpp  example_04_array_memory_resource_array.cpp  example_04_buffer_memory_resource.cpp  example_04_polymorphic_allocator.cpp  example_05_array_memory_resource.cpp  example_05_array_memory_resource_alignment.cpp  example_05_array_memory_resource_array.cpp  example_05_memory_resources_array.cpp  example_05_memory_resources_array_alignment.cpp  example_05_variable_length_array_vs_vector.cpp  example_06_memory_resource_deleter.cpp  example_06_memory_resource_manager.cpp  example_06_polymorphic_alloc_deleter.cpp  example_07_polymorphic_alloc_deleter.cpp  example_08_variable_length_array_vs_vector.cpp  example_09_variant.cpp  example_10_any.cpp  example_10_unbounded_variant.cpp  example_11_memory_resource_01heap.cpp  example_11_memory_resource_o1heap.cpp
cetlvast/suites/mcu/: CMakeLists.txt  test_text.cpp
cetlvast/suites/native/: test_span.cpp  test_span_asserts.cpp
cetlvast/suites/unittest/: CMakeLists.txt  flush_coverage_on_death.c  sonar.cpp  test_any.cpp  test_buffer_memory_resource.cpp  test_buffer_memory_resource_users.cpp  test_memory_resource_manager.cpp  test_o1heap_memory_resource.cpp  test_pf17_any.cpp  test_pf17_memory_resource.cpp  test_pf17_monotonic_buffer_resource.cpp  test_pf17_optional.cpp  test_pf17_polymorphic_allocator.cpp  test_pf17_string_view.cpp  test_pf17_type_traits.cpp  test_pf17_variant.cpp  test_pf17_variant.hpp  test_pf17_variant_assignment.cpp  test_pf17_variant_assignment_1.cpp  test_pf17_variant_assignment_2.cpp  test_pf17_variant_assignment_3.cpp  test_pf17_variant_basic.cpp  test_pf17_variant_combinations.cpp  test_pf17_variant_ctor.cpp  test_pf17_variant_ctor_1.cpp  test_pf17_variant_ctor_1234.cpp  test_pf17_variant_ctor_2.cpp  test_pf17_variant_ctor_3.cpp  test_pf17_variant_ctor_4.cpp  test_pf17_variant_ctor_5.cpp  test_pf17_variant_ctor_5678.cpp  test_pf17_variant_ctor_6.cpp  test_pf17_variant_ctor_7.cpp  test_pf17_variant_ctor_8.cpp  test_pf17_variant_other.cpp  test_pf20.cpp  test_pf20_span.cpp  test_pf20_span_asserts.cpp  test_rtti.cpp  test_span.cpp  (+12 more)
cetlvast/suites/unittest/optional/: test_pf17_optional.cpp  test_pf17_optional.hpp  test_pf17_optional_combinations.hpp  test_pf17_optional_combinations_assignment_1.cpp  test_pf17_optional_combinations_assignment_2.cpp  test_pf17_optional_combinations_assignment_3.cpp  test_pf17_optional_combinations_assignment_4.cpp  test_pf17_optional_combinations_assignment_5.cpp  test_pf17_optional_combinations_assignment_6.cpp  test_pf17_optional_combinations_ctor_1.cpp  test_pf17_optional_combinations_ctor_2.cpp  test_pf17_optional_combinations_ctor_3.cpp  test_pf17_optional_combinations_ctor_4.cpp  test_pf17_optional_combinations_ctor_5.cpp  test_pf17_optional_combinations_ctor_6.cpp  test_pf17_optional_combinations_ctor_7.cpp  test_pf17_optional_combinations_ctor_8.cpp
cetlvast/suites/unittest/pmr/: test_pmr_function.cpp  test_pmr_interface_ptr.cpp
doc_source/: doxygen.ini
doc_source/images/latex/: cyphal_logo.eps
include/cetl/: _helper_enable_copy_move.hpp  _helpers.hpp  any.hpp  array_memory_resource.hpp  cetl.h  cetl.hpp  memory_resources.hpp  o1heap_memory_resource.hpp  rtti.hpp  span.h  type_traits_ext.hpp  unbounded_variant.hpp  variable_length_array.hpp  visit_helpers.hpp
include/cetl/pf17/: any.hpp  array_memory_resource.hpp  attribute.hpp  buffer_memory_resource.hpp  byte.hpp  cetlpf.hpp  memory_resource.hpp  optional.hpp  string_view.hpp  type_traits.hpp  utility.hpp  variant.hpp
include/cetl/pf20/: cetlpf.h  cetlpf.hpp  span.h  span.hpp
include/cetl/pmr/: array_memory_resource.hpp  buffer_memory_resource.hpp  buffer_memory_resource_delegate.hpp  function.hpp  interface_ptr.hpp  memory.hpp  (+3 more)
(+1 files in other folders)
